[package]
name = "dcml"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
categories = [ "config", "encoding", "parser-implementations" ]
keywords = [ "config", "encoding", "configuration" ]
description = "Dynamic Config Markup Language, a friendly configuration syntax"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/dcml"
repository = "https://github.com/myfreeweb/dcml"

[features]
default = ["serde"]

[dependencies]
serde = { version = "1", optional = true }
im = "4"
num = "0.1"
combine = "2.3"
combine-language = "2.0"

[dev-dependencies]
serde_derive = "1"
